# rubber-duck

./: .gitignore  README.md  ROADMAP.md  dashboard-redesign-plan.md  pyproject.toml  rubberduck-design.md  rubberduck-extraction.md
.claude/: settings.json
.claude/hooks/: checkpoint-helper.sh  confirm-prompt.sh  session-label-nag.sh  session-meta.sh  session-start.sh  status-line.sh  watchtower-send.sh
.claude/personas/: professional.json  spike.json  sport.json
.github/workflows/: ci.yml
docs/: approval-routing-design.md  architecture.md  automating-tests-research.md  fork-with-agent-design.md  manual-test-cases.md  session-lifecycle-design.md  test-coverage.md
mac/: .gitignore  Package.swift  README.md  build.sh  make-icon.mjs
mac/Resources/: AppIcon.icns
scripts/: build_package.sh  check.sh  pre-commit  seed_demo.py  slop_check.py
site/: package-lock.json  package.json  screenshot.mjs
site-internal/: index.html
site/app/: Duck.tsx  Live.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
src/rubberduck/: __init__.py  approvals.py  browse.py  checkpoints.py  cli.py  dev_reload.py  doctor.py  eventbus.py  gitdetect.py  harnesses.py  history.py  hooks_install.py  httpio.py  insights.py  metrics.py  orchestrator.py  security.py  server.py  snapshots.py  spotlight.py  terminal.py  tmux.py  worktrees.py
tests/: conftest.py
tests/fakes/: fake_agent.py  test_fake_agent.py
tests/runtime/: test_act11_flow.py  test_approval_flow.py  test_claude_summary.py  test_codex_launch.py  test_dashboard_serving.py  test_event_flow.py  test_fork.py  test_fork_conversation.py  test_git_enrichment.py  test_persistence.py  test_session_io.py  test_snapshot_flow.py  test_summary_flow.py  test_supervisor.py  test_tmux_persistence.py  test_websocket_flow.py  test_worktree_launch.py
tests/unit/: test_approvals.py  test_branch_name.py  test_checkpoints.py  test_claude_code.py  test_cli.py  test_codex_runtime.py  test_copilot_runtime.py  test_dev_reload.py  test_doctor.py  test_eventbus.py  test_fake_agent.py  test_generic_runtime.py  test_gitdetect.py  test_harnesses.py  test_history.py  test_hooks_install.py  test_metrics.py  test_server.py  test_session_delete.py  test_snapshots.py  test_spotlight.py  test_stale_expiry.py  test_summarizer.py  test_terminal.py  test_tmux.py  test_websocket.py  test_worktrees.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: archive.spec.ts  (+11 more)
(+68 files in other folders)
