[project]
name = "rubberduck"
version = "0.0.0"
description = "Local-first orchestrator for AI coding agents"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rubberduck = "rubberduck.cli:main"

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "black==24.10.0",
    "mypy==1.13.0",
    "pytest==8.3.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rubberduck = ["hooks/*.sh"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
strict = true
packages = ["rubberduck"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
